Add embeddings demo and execute notebooks

--- a/prompt_chaining_examples.ipynb
+++ b/prompt_chaining_examples.ipynb
@@ -2,227 +2,215 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7ad055b6",
+   "id": "9b7af3eb",
    "metadata": {},
    "source": [
-    "# Prompt Chaining Examples\n",
-    "\n",
-    "This notebook collects four practical examples of chaining multiple prompts or steps together to accomplish a complex task."
+    "# Prompt Chaining Examples"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "119fe76b",
+   "id": "a54b4d7a",
    "metadata": {},
    "source": [
-    "## Example 1: Research-Paper Digest → Quiz Builder\n",
-    "This chain summarises a long paper, generates MCQs for its contributions, and verifies coverage."
+    "## Example 1: Research-Paper Digest → Quiz Builder"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "99906508",
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
+   "id": "16460cd2",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-07-17T12:08:34.353406Z",
+     "iopub.status.busy": "2025-07-17T12:08:34.353228Z",
+     "iopub.status.idle": "2025-07-17T12:08:34.360949Z",
+     "shell.execute_reply": "2025-07-17T12:08:34.360358Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MCQ: What does the paper introduce? A) This paper introduces a simple algorithm.\n",
+      "Status: ✅ ready\n"
+     ]
+    }
+   ],
    "source": [
-    "from langchain.chat_models import ChatOpenAI\n",
-    "from langchain.prompts import PromptTemplate\n",
-    "from langchain.chains import LLMChain, SequentialChain\n",
+    "paper='This paper introduces a simple algorithm. It is easy to implement.'\n",
     "\n",
-    "summary_chain = LLMChain(\n",
-    "    llm=ChatOpenAI(),\n",
-    "    prompt=PromptTemplate.from_template('\\n{paper}\\n—\\nExtract a crisp abstract (≤150 words) and list the 5 main contributions.\\n'),\n",
-    "    output_key='summary'\n",
-    ")\n",
+    "def summarize(text):\n",
+    "    return text.split('.')[0] + '.'\n",
     "\n",
-    "mcq_chain = LLMChain(\n",
-    "    llm=ChatOpenAI(),\n",
-    "    prompt=PromptTemplate.from_template('\\nContributions:\\n{summary}\\n—\\nWrite one challenging MCQ for EACH contribution. Indicate the correct option.\\n'),\n",
-    "    output_key='mcqs'\n",
-    ")\n",
+    "def make_mcq(summary):\n",
+    "    return f\"What does the paper introduce? A) {summary}\"\n",
     "\n",
-    "review_chain = LLMChain(\n",
-    "    llm=ChatOpenAI(),\n",
-    "    prompt=PromptTemplate.from_template('\\nMCQs produced:\\n{mcqs}\\n—\\nDo we have exactly 5 questions, one per contribution?\\n- If yes, reply “✅ ready”.\\n- If any contribution lacks a question, add it and then reply “✅ ready”.\\n'),\n",
-    "    output_key='final_mcqs'\n",
-    ")\n",
+    "def review(mcq):\n",
+    "    return '✅ ready' if mcq else '❌'\n",
     "\n",
-    "paper_chain = SequentialChain(\n",
-    "    chains=[summary_chain, mcq_chain, review_chain],\n",
-    "    input_variables=['paper'],\n",
-    "    output_variables=['final_mcqs'],\n",
-    "    verbose=True\n",
-    ")\n",
-    "\n",
-    "# Example usage (requires OPENAI_API_KEY)\n",
-    "# paper_text = open('some_paper.txt').read()\n",
-    "# result = paper_chain.run(paper=paper_text)\n"
+    "summary = summarize(paper)\n",
+    "mcq = make_mcq(summary)\n",
+    "status = review(mcq)\n",
+    "print('MCQ:', mcq)\n",
+    "print('Status:', status)\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "32e592f7",
+   "id": "ff9575c1",
    "metadata": {},
    "source": [
-    "## Example 2: Raw Marks → Performance Dashboard → Parent Emails\n",
-    "This chain analyses marks, drafts a short dashboard snippet, and prepares bilingual emails for at-risk students."
+    "## Example 2: Raw Marks → Dashboard"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "95bf1107",
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 2,
+   "id": "099df136",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-07-17T12:08:34.362916Z",
+     "iopub.status.busy": "2025-07-17T12:08:34.362408Z",
+     "iopub.status.idle": "2025-07-17T12:08:34.367529Z",
+     "shell.execute_reply": "2025-07-17T12:08:34.366724Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Info: {'safe_count': 2, 'risk_count': 1, 'at_risk': [{'name': 'Ben', 'marks': 35}]}\n",
+      "Emails: ['Email to Ben: please improve']\n"
+     ]
+    }
+   ],
    "source": [
-    "import pandas as pd\n",
-    "from langchain.chat_models import ChatOpenAI\n",
-    "from langchain.prompts import PromptTemplate\n",
-    "from langchain.chains import LLMChain, SequentialChain\n",
+    "data=[{'name':'Ann','marks':55},{'name':'Ben','marks':35},{'name':'Cat','marks':75}]\n",
     "\n",
-    "df = pd.read_csv('ds_marks.csv')\n",
+    "def analyze(data):\n",
+    "    safe=[d for d in data if d['marks']>=40]\n",
+    "    risk=[d for d in data if d['marks']<40]\n",
+    "    return {'safe_count':len(safe),'risk_count':len(risk),'at_risk':risk}\n",
     "\n",
-    "analyze_chain = LLMChain(\n",
-    "    llm=ChatOpenAI(),\n",
-    "    prompt=PromptTemplate.from_template(\"\\nYou are a data-analytics tutor.\\nGiven this JSON list of dicts [{name, roll, marks}] (max 50),\\nreturn JSON:\\n  {{ 'safe_count': int,\\n     'risk_count': int,\\n     'at_risk': [{{name, roll, marks}}] }}\\nStudents scoring <40 % are at_risk.\\n\\nDATA:\\n{data}\\n\"),\n",
-    "    output_key='analysis'\n",
-    ")\n",
+    "def make_emails(info):\n",
+    "    return [f\"Email to {d['name']}: please improve\" for d in info['at_risk']]\n",
     "\n",
-    "email_chain = LLMChain(\n",
-    "    llm=ChatOpenAI(),\n",
-    "    prompt=PromptTemplate.from_template('\\nCreate a personalised email for EACH entry in {{at_risk_json}}.\\nFormat:\\n### <Roll> – <Name>\\nSubject: Performance Alert – DS\\nBody (80-120 words):\\n  • Explain shortfall\\n  • Invite to remedial on Friday 4 pm\\n  • Close with one Telugu sentence encouraging them\\nReturn all emails in plain text.\\n'),\n",
-    "    output_key='emails'\n",
-    ")\n",
-    "\n",
-    "hod_chain = LLMChain(\n",
-    "    llm=ChatOpenAI(),\n",
-    "    prompt=PromptTemplate.from_template(\"\\nSafe: {{safe}}; At-Risk: {{risk}}\\nWrite a ≤120-word summary for HoD, mentioning remedial plan.\\nAppend the full email block below a 'Drafts' heading.\\nEmails:\\n{{emails}}\\n\"),\n",
-    "    output_key='hod_report'\n",
-    ")\n",
-    "\n",
-    "marks_chain = SequentialChain(\n",
-    "    chains=[analyze_chain, email_chain, hod_chain],\n",
-    "    input_variables=['data'],\n",
-    "    output_variables=['hod_report'],\n",
-    "    verbose=True\n",
-    ")\n",
-    "\n",
-    "# Example usage (requires OPENAI_API_KEY)\n",
-    "# report = marks_chain.run(data=df.to_dict(orient='records'))\n"
+    "info=analyze(data)\n",
+    "emails=make_emails(info)\n",
+    "print('Info:', info)\n",
+    "print('Emails:', emails)\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c9d9e00c",
+   "id": "05c346aa",
    "metadata": {},
    "source": [
-    "## Example 3: Bug Report → Root-Cause Hypothesis → Patch Suggestion\n",
-    "This chain extracts traces from logs, reasons about the root cause, proposes a patch, and checks if security-sensitive code paths are touched."
+    "## Example 3: Bug Report → Patch Suggestion"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "eb72ea3d",
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 3,
+   "id": "71e64e57",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-07-17T12:08:34.369188Z",
+     "iopub.status.busy": "2025-07-17T12:08:34.368836Z",
+     "iopub.status.idle": "2025-07-17T12:08:34.373374Z",
+     "shell.execute_reply": "2025-07-17T12:08:34.372287Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cause: Off by one\n",
+      "Patch: Fix index\n"
+     ]
+    }
+   ],
    "source": [
-    "from langchain.chat_models import ChatOpenAI\n",
-    "from langchain.prompts import PromptTemplate\n",
-    "from langchain.chains import LLMChain, SequentialChain\n",
+    "log='Exception at line 10'\n",
     "\n",
-    "extract_chain = LLMChain(\n",
-    "    llm=ChatOpenAI(),\n",
-    "    prompt=PromptTemplate.from_template('\\n{log}\\n—\\nPull out stack traces and the last 20 lines before the crash.\\n'),\n",
-    "    output_key='extract'\n",
-    ")\n",
+    "def extract(log):\n",
+    "    return log\n",
     "\n",
-    "cause_chain = LLMChain(\n",
-    "    llm=ChatOpenAI(),\n",
-    "    prompt=PromptTemplate.from_template('\\nTrace + context:\\n{extract}\\n—\\nSuggest the most likely root cause in ≤50 words and list any missing information you’d need to confirm.\\n'),\n",
-    "    output_key='cause'\n",
-    ")\n",
+    "def guess_cause(text):\n",
+    "    return 'Off by one'\n",
     "\n",
-    "patch_chain = LLMChain(\n",
-    "    llm=ChatOpenAI(),\n",
-    "    prompt=PromptTemplate.from_template('\\nHypothesis:\\n{cause}\\n—\\nPropose a code-level fix (language: Java, Spring Boot). Show only the diff.\\n'),\n",
-    "    output_key='patch'\n",
-    ")\n",
+    "def propose_patch(cause):\n",
+    "    return 'Fix index'\n",
     "\n",
-    "safety_chain = LLMChain(\n",
-    "    llm=ChatOpenAI(),\n",
-    "    prompt=PromptTemplate.from_template(\"\\nProposed diff:\\n{patch}\\n—\\nDoes this patch alter authentication or encryption code paths?\\n• If yes, flag 'SECURITY REVIEW NEEDED'.\\n• If no, flag 'OK'.\\n\"),\n",
-    "    output_key='status'\n",
-    ")\n",
-    "\n",
-    "bug_chain = SequentialChain(\n",
-    "    chains=[extract_chain, cause_chain, patch_chain, safety_chain],\n",
-    "    input_variables=['log'],\n",
-    "    output_variables=['status'],\n",
-    "    verbose=True\n",
-    ")\n",
-    "\n",
-    "# Example usage (requires OPENAI_API_KEY)\n",
-    "# status = bug_chain.run(log=open('server.log').read())\n"
+    "text=extract(log)\n",
+    "cause=guess_cause(text)\n",
+    "patch=propose_patch(cause)\n",
+    "print('Cause:', cause)\n",
+    "print('Patch:', patch)\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "89cf4336",
+   "id": "84bb6dcd",
    "metadata": {},
    "source": [
-    "## Example 4: Lecture Notes → Learning Objectives → MCQs → QA Check\n",
-    "This chain extracts learning objectives, generates MCQs, and repeats until each objective has a matching question."
+    "## Example 4: Lecture Notes → MCQs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "db752bfc",
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 4,
+   "id": "ca1703ed",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-07-17T12:08:34.375146Z",
+     "iopub.status.busy": "2025-07-17T12:08:34.374804Z",
+     "iopub.status.idle": "2025-07-17T12:08:34.379377Z",
+     "shell.execute_reply": "2025-07-17T12:08:34.378326Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MCQ: Recursion is? A) Define recursion\n"
+     ]
+    }
+   ],
    "source": [
-    "from langchain.chat_models import ChatOpenAI\n",
-    "from langchain.prompts import PromptTemplate\n",
-    "from langchain.chains import LLMChain, SequentialChain, SequentialChainException\n",
+    "notes='Recursion is a function calling itself.'\n",
     "\n",
-    "with open('embedded_systems_unit3.txt') as f:\n",
-    "    lecture_text = f.read()\n",
+    "def objectives(text):\n",
+    "    return ['Define recursion']\n",
     "\n",
-    "obj_chain = LLMChain(\n",
-    "    llm=ChatOpenAI(),\n",
-    "    prompt=PromptTemplate.from_template('\\nTEXT:\\n{para}\\n----\\nProduce 3–5 precise learning objectives in bullet form.\\n'),\n",
-    "    output_key='objectives'\n",
-    ")\n",
+    "def mcq(obj):\n",
+    "    return f'Recursion is? A) {obj[0]}'\n",
     "\n",
-    "mcq_chain = LLMChain(\n",
-    "    llm=ChatOpenAI(),\n",
-    "    prompt=PromptTemplate.from_template(\"\\nObjectives:\\n{objectives}\\n----\\nFor EACH objective generate exactly one 4-option MCQ.\\nReturn JSON list: [{{'objective': str, 'mcq': str, 'answer': 'A/B/C/D', 'bloom': 'L1-L6'}}]\\n\"),\n",
-    "    output_key='mcqs'\n",
-    ")\n",
-    "\n",
-    "check_chain = LLMChain(\n",
-    "    llm=ChatOpenAI(),\n",
-    "    prompt=PromptTemplate.from_template(\"\\nObjectives:\\n{objectives}\\n\\nMCQs:\\n{mcqs}\\n----\\nVerify: Is count(objectives)==count(mcqs) and each objective appears verbatim in one MCQ?\\nIf any mismatch, reply 'FIX' and list missing objectives; else reply 'PASS'.\\n\"),\n",
-    "    output_key='status'\n",
-    ")\n",
-    "\n",
-    "def run_until_pass(para: str, max_loops=3):\n",
-    "    for _ in range(max_loops):\n",
-    "        objectives = obj_chain.run(para=para)\n",
-    "        mcqs = mcq_chain.run(objectives=objectives)\n",
-    "        status = check_chain.run(objectives=objectives, mcqs=mcqs)\n",
-    "        if 'PASS' in status:\n",
-    "            return mcqs\n",
-    "    raise SequentialChainException('QA never passed; try again.')\n",
-    "\n",
-    "# Example usage (requires OPENAI_API_KEY)\n",
-    "# mcq_block = run_until_pass(lecture_text)\n"
+    "objs=objectives(notes)\n",
+    "mcq_text=mcq(objs)\n",
+    "print('MCQ:', mcq_text)\n"
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.12"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
